<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_sort_by_popularity"
        android:title="@string/menu_sort_popularity"
        android:icon="@drawable/ic_popular"
        android:enabled="true"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/menu_sort_by_user_rating"
        android:title="@string/menu_sort_user_rating"
        android:icon="@drawable/ic_user_rating"
        android:enabled="true"
        app:showAsAction="always" />

    <item android:id="@+id/menu_sort_by_trending_daily"
        android:title="@string/menu_sort_trending_daily"
        android:icon="@drawable/ic_trending"
        android:enabled="true"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_favourites"
        android:title="@string/menu_favourites"
        android:icon="@drawable/ic_favourite_tinted"
        android:enabled="true"
        app:showAsAction="always"/>

    <item android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search"
        android:enabled="true"
        app:showAsAction="always"/>
</menu>