<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/menu_movie_details_activity_menu_label"
        app:showAsAction="always"
        android:icon="@drawable/ic_more_options_white"
        tools:ignore="AlwaysShowAction">
        <menu>
            <item android:id="@+id/menu_share"
                android:title="@string/menu_share_movie"
                android:orderInCategory="100"
                android:icon="@drawable/ic_share"
                app:showAsAction="never"/>

            <item android:id="@+id/menu_refresh_movie_details"
                android:title="@string/menu_refresh"
                android:orderInCategory="101"
                android:icon="@drawable/ic_refresh"
                app:showAsAction="never"/>
        </menu>
    </item>

</menu>