<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_sort"
        android:orderInCategory="100"
        android:checkableBehavior="single">
        <item android:id="@+id/menu_sort_by_popularity"
            android:title="@string/menu_sort_popularity"
            app:showAsAction="never"/>
        <item android:id="@+id/menu_sort_by_user_rating"
            android:title="@string/menu_sort_user_rating"
            app:showAsAction="never" />
    </group>
    <group
        android:id="@+id/image_quality"
        android:orderInCategory="101"
        android:checkableBehavior="single">
        <item android:id="@+id/menu_standard_quality_image"
            android:title="@string/menu_use_standard_images"
            app:showAsAction="never"/>
        <item android:id="@+id/menu_high_quality_image"
            android:title="@string/menu_use_high_quality_images"
            app:showAsAction="never" />
    </group>

</menu>