<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MovieDetailsActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/app_name"
                app:expandedTitleMarginTop="48dp"
                app:expandedTitleGravity="start|top"
                app:layout_scrollFlags="exitUntilCollapsed|scroll"
                android:fitsSystemWindows="true"
                app:statusBarScrim="@color/colorPrimary"
                app:expandedTitleMarginStart="16dp"
                app:contentScrim="@color/colorPrimary">

                <ImageView
                    android:id="@+id/imageViewMovieDetailsPoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.5"
                    android:contentDescription="@string/description_movie_details_movie_poster_image_view"
                    android:src="@drawable/ic_image_place_holder"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent">

                        <FrameLayout
                            android:id="@+id/frameLayoutRatingBarUserRating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent">
                            <!-- Setting rating bar style to small causes the isIndicator attribute to be true, -->
                            <!--hence the user cannot interact with the rating bar via touch-->
                            <androidx.appcompat.widget.AppCompatRatingBar
                                android:id="@+id/ratingBarUserRating"
                                style="@style/Widget.AppCompat.RatingBar.Small"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:numStars="10"
                                android:rating="0" />
                        </FrameLayout>

                        <TextView
                            android:id="@+id/textViewUserRating"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_marginVertical="8dp"
                            android:background="@drawable/user_rating_circle"
                            android:ellipsize="end"
                            android:gravity="center"
                            android:text="@string/text_text_view_user_rating"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/frameLayoutRatingBarUserRating"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="1.0" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent">

                        <TextView
                            android:id="@+id/textViewRuntime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|end"
                            android:layout_marginVertical="8dp"
                            android:background="@color/lowTransparencyBg"
                            android:gravity="end"
                            android:padding="4dp"
                            android:textColor="@color/textLight"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toTopOf="@+id/textViewReleaseDate"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="1.0" />

                        <TextView
                            android:id="@+id/textViewReleaseDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top|center_horizontal"
                            android:background="@color/lowTransparencyBg"
                            android:padding="4dp"
                            android:textColor="@color/textLight"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/fullTransparencyBg"
                    app:titleTextColor="@color/textLight"
                    app:layout_collapseMode="pin" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/segment_divider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/textLightShade"
                    android:textStyle="bold|italic"
                    android:labelFor="@id/textViewGenre"
                    android:text="@string/text_label_genre"/>

                <TextView
                    android:id="@+id/textViewGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/textLight"
                    android:text="@string/text_missing_value"/>

                <include layout="@layout/segment_divider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/textLightShade"
                    android:textStyle="bold|italic"
                    android:labelFor="@id/textViewTagLine"
                    android:text="@string/text_label_tag_line"/>

                <TextView
                    android:id="@+id/textViewTagLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/textLight"
                    android:text="@string/text_missing_value"/>

                <include layout="@layout/segment_divider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/textLightShade"
                    android:textStyle="bold|italic"
                    android:labelFor="@id/textViewPlotSynopsis"
                    android:text="@string/text_label_plot_synopsis"/>

                <TextView
                    android:id="@+id/textViewPlotSynopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/textLight"
                    android:text="@string/text_missing_value"/>

                <include layout="@layout/segment_divider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:textSize="12sp"
                    android:textColor="@color/textLightShade"
                    android:textStyle="bold|italic"
                    android:labelFor="@id/recyclerViewTrailers"
                    android:text="@string/text_label_trailers"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="24dp"
                    android:layout_marginHorizontal="8dp"/>

                <include layout="@layout/segment_divider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="4dp"
                    android:textSize="12sp"
                    android:textColor="@color/textLightShade"
                    android:textStyle="bold|italic"
                    android:labelFor="@id/recyclerviewReviews"
                    android:text="@string/text_label_reviews"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"/>

                <View
                    android:layout_width="240dp"
                    android:layout_height="0.5dp"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorAccent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="240dp"
                    android:text="@string/text_tmdb_disclaimer"
                    android:textSize="12sp"
                    android:paddingHorizontal="4dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/textLight"/>

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="24dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/description_image_view_tmdb_icon"
                    android:src="@drawable/ic_tmdb" />

                <TextView
                    android:id="@+id/textViewIconsAttribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_icons8_attribution"
                    android:textSize="16sp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginBottom="16dp"
                    android:paddingHorizontal="4dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/textLight"/>

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFavourite"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:contentDescription="@string/description_fab_favourites"
            android:src="@drawable/ic_favourite" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ProgressBar
        android:id="@+id/progressBarFetchingMovieDetailsMovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutDataNotFoundMovieDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageViewDataNotFoundMovieDetails"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:tint="@color/textLight"
            android:contentDescription="@string/description_image_view_error_or_no_internet"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/textViewDataNotFoundMovieDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/textLight"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toBottomOf="@id/imageViewDataNotFoundMovieDetails"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintVertical_bias="0.05"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="8dp"
            android:layout_marginBottom="40dp"
            android:layout_marginHorizontal="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewDataNotFoundMovieDetails"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="1">

            <Button
                android:id="@+id/buttonRetryMovieFetchingMovieDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="56dp"
                android:background="@color/colorAccent"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/button_retry_fetching_movies" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>